* Nuevo viaje QA

--- a/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
@@ -50,15 +50,13 @@
                     <div class="form-group col-3">
                         <label class="col-form-label col-form-label-sm">Fecha de salida</label>
                         <div>
-                            <input type="date" class="form-control form-control-sm" id="fechasalida" name="fechasalida"
-                                   required>
+                            <input type="datetime-local" class="form-control form-control-sm" id="fechasalida" name="fechasalida" required>
                         </div>
                     </div>
                     <div class="form-group col-3">
                         <label class="col-form-label col-form-label-sm">Fecha de llegada</label>
                         <div>
-                            <input type="date" class="form-control form-control-sm" id="fechallegada"
-                                   name="fechallegada" required>
+                            <input type="datetime-local" class="form-control form-control-sm" id="fechallegada" name="fechallegada" required>
                         </div>
                     </div>
                 </div>
