--- a/KLS_WEB/KLS_WEB/Views/Carriers/Box/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Box/Index.cshtml
@@ -34,7 +34,7 @@
 
                         <div class="form-group row">
                             <div class="col-6">
-                                <input type="checkbox" class="form-check-inline" value="true" id="Densidad" name="Densidad">
+                                <input type="checkbox" value="true" id="Densidad" name="Densidad">
                                 <label for="Densidad">
                                     Densidad
                                 </label>
