--- a/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/TypesOfUnits/Index.cshtml
@@ -96,6 +96,18 @@
                             <input type="number" step="0.01" class="form-control" name="rendimiento" id="rendimiento" value="" />
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="">Operador</label>
+                                <input type="number" step="0.01" class="form-control" name="operador" id="operador" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label class="">Administrativo</label>
+                            <input type="number" step="0.01" class="form-control" required name="administrativo" id="administrativo" />
+                        </div>
+                    </div>
 
                     <h3>Límites</h3>
                     <div class="row">
@@ -175,6 +187,8 @@
                     $("#litros").val(dataUnidades[indice].litros);
                     $("#limite_peso").val(dataUnidades[indice].limite_peso);
                     $("#limite_volumen").val(dataUnidades[indice].limite_volumen);
+                    $("#operador").val(dataUnidades[indice].operador);
+                    $("#administrativo").val(dataUnidades[indice].administrativo);
                     $("#ejes").val(dataUnidades[indice].ejes);
                     $('#estatus option[value="' + dataUnidades[indice].estatus + '"]').attr("selected", true);
                     $("#modalDiv").modal("show");
@@ -202,8 +216,8 @@
                             <td>${nCon(key.mantenimiento)}/Km</td>
                             <td>${nCon(key.llantas)}/Km</td>
                             <td>${nCon(key.litros)}/Km</td>
-                            <td>Operador</td>
-                            <td>Administrativo</td>
+                            <td>${nCon(key.operador)}/Km</td>
+                            <td>${nCon(key.administrativo)}/Km</td>
                             <td>${nCon(key.limite_peso)}/Km</td>
                             <td>${nCon(key.limite_volumen)}/Km</td>
                             <td>${nCon(key.ejes)}/Km</td>
